<resources>
    <string name="app_name">Weather App</string>

    <string name="sizeitem">40dp</string>
    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <string name="error.dialog.positive">OK</string>
    <string name="error.message.title.oops">Oops...</string>
    <string name="error.message.api">Error while processing your request</string>
    <string name="error.message.no.internet">No Internet Connection</string>
    <string name="text.main.no.authors">No Authors</string>
    <string name="message.loading">Loading...</string>
    <string name="activity_about">About</string>

    <string name="doF">ºF</string>
    <string name="doC">ºC</string>
    <string name="nhietdotrong">_ _ _</string>
    <string name="xoa">Xóa</string>
    <string name="thoat">Thoát</string>
    <string name="detail_history">Chi Tiết Lịch Sử GTìm Kiếm Thành Phố</string>
    <string name="text1">Giờ Tìm Kiếm Thành Phố :</string>
    <string name="text2">Ngày Tìm Kiếm Thành Phố :</string>
    <string name="text3">Thành Phố Tìm Kiếm :</string>
    <string name="text4">Nhiệt Độ Thành Phố Tìm Kiếm :</string>
    <string name="text5">Độ Gió Của Thành Phố Tìm Kiếm :</string>
    <string name="text6">Tốc Độ Gió Của Thành Phố Tìm Kiếm :</string>
    <string name="text7">Độ Ẩm Của Thành Phố Tìm Kiếm :</string>
    <string name="text8">Trạng Thái Thời Tiết Của Thành Phố :</string>

    <string name="GPSBat">GPS Đã Được Bật</string>
    <string name="GPSTat">Ứng dụng cần xác định vị trí vui lòng bật GPS</string>
    <string name="GPSCaiDat">Vào cài đặt GPS</string>
    <string name="GpsHUY">Hủy</string>
    <string name="BatMang">Đã Kết Nối Dữ Liệu</string>
    <string name="TatMang">Dữ Liệu Di Dộng Đã Tắt</string>
    <string name="caidatMang">Bật Dữ Liệu Di Động Hoặc Sử Dụng Wi-Fi Để Truy Cập Dữ Liệu</string>
    <string name="Ok">OK</string>
    <string name="CaiDat">Cài Đặt</string>
    <string name="ThemLichSu">Thêm Thành Công Vào Lịch Sử Tìm Kiếm</string>
    <string name="ThemLichSuThatBai">Thêm Thất Bại</string>

    <string name="NguyHiem">Không Khí Đang Ở Mức Nguy hiểm</string>
    <string name="RatONhiem">Không Khí Đang Ở Mức RẤt Ô Nhiễm</string>
    <string name="Onhiem">Không Khí Đang Ở Mức Ô Nhiễm</string>
    <string name="NhayCam">Không Khí Đang Ở Mức Không tốt cho người thuộc nhóm nhạy cảm</string>
    <string name="VuaPhai">Không Khí Đang Ở Mức Vừa Phải</string>
    <string name="Tot">Không Khí Đang Ở Mức Tốt</string>
    <string name="xoalichsu">Bạn Có Chắc  Chắn Muốn Xóa Lịch Sử Tìm Kiếm Thành Phố </string>
    <string name="Toastxoa">Đã Xóa Thành Công</string>
    <string name="TitleFvsC">Chuyển Đổi ºC vs ºF</string>
    <string name="title_history">Lịch Sử Tìm Kiếm Thành Phố</string>
<!--historyIcon-->
    <string name="windSpeed">Tốc Độ Gió :</string>
    <string name="wind">Độ gió :</string>
    <string name="temperature">º</string>
    <string name="Humidity">Độ Ẩm :</string>
    <string name="delete_history">Xóa Lịch Sử</string>
    <string name="detail">Chi Tiết</string>

    <string name="AQI">US AQI</string>
    <string-array name="List_City">
        <item>Hà Nội</item>
        <item>Thành Phố Hồ Chí Minh</item>
        <item>Tuyên Quang</item>
        <item>Hà Giang</item>
        <item>Yên Bái</item>
        <item>Cao Bằng</item>
        <item>Hà Tĩnh</item>
        <item>Ninh Binh</item>
        <item>Phú Thọ</item>
        <item>Vĩnh Phúc</item>
        <item>Bắc Giang</item>
        <item>Hưng Yên</item>
        <item>Thành Phố Hải Dương</item>
        <item>Bắc Ninh</item>
        <item>Bình Dương</item>
        <item>Thanh Hóa</item>
        <item>Hà Nam</item>
        <item>Hà Tĩnh</item>
        <item>Tỉnh Thái Nguyên</item>
        <item>Huế</item>
        <item>Đà Nẵng</item>
        <item>Cần Thơ</item>
        <item>Nam Định</item>
        <item>Bạc Liêu</item>
        <item>Hải Phòng</item>
        <item>Bến Tre</item>
        <item>Tây Ninh</item>
        <item>Yên Bái</item>
        <item>Bạc Liêu</item>
        <item>Bình Định</item>
        <item>Tỉnh Bình Phước</item>
        <item>Tỉnh Bình Thuận</item>
        <item>Gia Lai</item>
        <item>Khánh Hòa</item>
        <item>Long An</item>
        <item>Vĩnh Long</item>
        <item>Cà Mau</item>
    </string-array>
</resources>
