<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_day"
    android:alpha="0.6"
    android:background="@drawable/botron"
    android:orientation="vertical">
    <TextView
        android:id="@+id/ngaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_Day" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/windSpeed"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_Day" />

        <TextView
            android:id="@+id/dogio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft_5"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_Day" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft_40"
            android:text="@string/wind"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_Day" />

        <TextView
            android:id="@+id/gio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft_10"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_Day" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nhietdolist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nhietdotrong"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_temperature_Day" />

        <ImageView
            android:id="@+id/iconlist"
            android:layout_width="@dimen/width_Img_day"
            android:layout_height="@dimen/height_Img_day"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/marginLeft_40" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Humidity"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_Day" />

        <TextView
            android:id="@+id/doam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_Day" />

        <TextView
            android:id="@+id/trangthailist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft_30"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_Day" />


    </LinearLayout>
</LinearLayout>