<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_day"
    android:alpha="0.6"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/iconngay_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/windSpeed"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tocdogio_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_Day" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft_40"
            android:text="@string/wind"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_Day" />

        <TextView
            android:id="@+id/dogio_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft_10"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_Day" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nhietdo_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nhietdotrong"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_temperature_Day" />

        <ImageView
            android:id="@+id/iconimg_city"
            android:layout_width="@dimen/width_Img_day"
            android:layout_height="@dimen/height_Img_day"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/marginLeft_40" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Humidity"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_Day" />

        <TextView
            android:id="@+id/doam_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_Day" />

        <TextView
            android:id="@+id/trangthai_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft_30"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_Day" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/vertical_relativeLayout"
        android:background="@color/black" />
</LinearLayout>